fix comment body overflow

--- a/assets/styles/partials/_component.comments.scss
+++ b/assets/styles/partials/_component.comments.scss
@@ -180,6 +180,7 @@ $border-width :     4px;
         line-height:1.3;
         max-height: 50px;
         margin-top: 20px;
+        overflow:hidden;
         @media #{$mobile-small} {
             font-size:14px;
             line-height:1.14;
