--- a/static/css/concat.css
+++ b/static/css/concat.css
@@ -15848,7 +15848,8 @@ input[type=radio].inline {
   font-size: 16px;
   line-height: 1.3;
   max-height: 50px;
-  margin-top: 20px; }
+  margin-top: 20px;
+  overflow: hidden; }
   @media screen and (max-width: 575px) {
     .comments__body {
       font-size: 14px;
